force-app/main/default/objects/Customer_Registration__c/Customer_Registration__c.object-meta.xml
<CustomObject>
    <label>Site Visit Form</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Customer Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visit Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>