force-app/main/default/objects/Customer_Registration__c/fields/Address_Dubai__c.field-meta.xml
<CustomField>
    <fullName>Address_Dubai__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>