force-app/main/default/objects/Customer_Registration__c/fields/AlternateEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>AlternateEmailAddress__c</fullName>
    <label>Alternate Email Address</label>
    <type>Email</type>
</CustomField>