force-app/main/default/objects/Customer_Registration__c/fields/Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Site Visit Forms</relationshipLabel>
    <relationshipName>Site_Visit_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>