force-app/main/default/objects/Customer_Registration__c/fields/Are_You_Member_Of_Any_Club__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Member_Of_Any_Club__c</fullName>
    <label>Are You Member Of Any Club/ Association</label>
    <length>100</length>
    <type>Text</type>
</CustomField>