force-app/main/default/objects/Customer_Registration__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <length>50</length>
    <type>Text</type>
</CustomField>