force-app/main/default/objects/Customer_Registration__c/fields/Budget_in_cr__c.field-meta.xml
<CustomField>
    <fullName>Budget_in_cr__c</fullName>
    <label>Indicative Budget (In Mn)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.7 Mil – 1.5 Mil</fullName>
            </value>
            <value>
                <fullName>1.5 Mil – 3 Mil</fullName>
            </value>
            <value>
                <fullName>3 Mil – 5.5 Mil</fullName>
            </value>
            <value>
                <fullName>5.5 Mil – 8 Mil</fullName>
            </value>
            <value>
                <fullName>8 Mil – 12.5 Mil</fullName>
            </value>
            <value>
                <fullName>12.5 Mil &amp; above</fullName>
            </value>
            <value>
                <fullName>0.5 to 1</fullName>
                <isActive>false</isActive>
                <label>0.5 to 1 Mn</label>
            </value>
            <value>
                <fullName>1 to 2 Cr</fullName>
                <isActive>false</isActive>
                <label>1 to 2 Mn</label>
            </value>
            <value>
                <fullName>1.1 to 1.5</fullName>
                <isActive>false</isActive>
                <label>1.1 to 1.5</label>
            </value>
            <value>
                <fullName>1.6 to 2</fullName>
                <isActive>false</isActive>
                <label>1.6 to 2</label>
            </value>
            <value>
                <fullName>10 to 15 Cr</fullName>
                <isActive>false</isActive>
                <label>10 to 15 Cr</label>
            </value>
            <value>
                <fullName>15 to 25 Cr</fullName>
                <isActive>false</isActive>
                <label>15 to 25 Cr</label>
            </value>
            <value>
                <fullName>2 to 5 Cr</fullName>
                <isActive>false</isActive>
                <label>2 to 5 Cr</label>
            </value>
            <value>
                <fullName>2.1 to 2.5</fullName>
                <isActive>false</isActive>
                <label>2.1 to 2.5</label>
            </value>
            <value>
                <fullName>2.6 to 3.0</fullName>
                <isActive>false</isActive>
                <label>2.6 to 3.0</label>
            </value>
            <value>
                <fullName>25 to 50 Cr</fullName>
                <isActive>false</isActive>
                <label>25 to 50 Cr</label>
            </value>
            <value>
                <fullName>3.1 to 3.5</fullName>
                <isActive>false</isActive>
                <label>3.1 to 3.5</label>
            </value>
            <value>
                <fullName>3.6+</fullName>
                <isActive>false</isActive>
                <label>3.6+</label>
            </value>
            <value>
                <fullName>5 to 7.5 Cr</fullName>
                <isActive>false</isActive>
                <label>5 to 7.5 Cr</label>
            </value>
            <value>
                <fullName>50 Cr &amp; above</fullName>
                <isActive>false</isActive>
                <label>50 Cr &amp; above</label>
            </value>
            <value>
                <fullName>7.5 to 10 Cr</fullName>
                <isActive>false</isActive>
                <label>7.5 to 10 Cr</label>
            </value>
            <value>
                <fullName>Below 1 Cr</fullName>
                <isActive>false</isActive>
                <label>Below 1 Cr</label>
            </value>
            <value>
                <fullName>Upto AED 2.1 MN</fullName>
                <isActive>false</isActive>
                <label>Upto AED 2.1 MN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>