force-app/main/default/objects/Customer_Registration__c/fields/Company_Business_Location__c.field-meta.xml
<CustomField>
    <fullName>Company_Business_Location__c</fullName>
    <label>Company/Business Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>