force-app/main/default/objects/Customer_Registration__c/fields/Company_Business_Name_Dubai__c.field-meta.xml
<CustomField>
    <fullName>Company_Business_Name_Dubai__c</fullName>
    <label>Company/Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>