force-app/main/default/objects/Customer_Registration__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>1 BR</fullName>
            </value>
            <value>
                <fullName>2 BR</fullName>
            </value>
            <value>
                <fullName>3 BR</fullName>
            </value>
            <value>
                <fullName>2DP</fullName>
            </value>
            <value>
                <fullName>3DP</fullName>
            </value>
            <value>
                <fullName>4DP</fullName>
            </value>
            <value>
                <fullName>4BR Villa</fullName>
            </value>
            <value>
                <fullName>5BR Villa</fullName>
            </value>
            <value>
                <fullName>GFA Plots</fullName>
            </value>
            <value>
                <fullName>Gardenia</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Canal Villa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>