force-app/main/default/objects/Customer_Registration__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+93</fullName>
            </value>
            <value>
                <fullName>+358</fullName>
            </value>
            <value>
                <fullName>+355</fullName>
            </value>
            <value>
                <fullName>+213</fullName>
            </value>
            <value>
                <fullName>+1684</fullName>
            </value>
            <value>
                <fullName>+376</fullName>
            </value>
            <value>
                <fullName>+244</fullName>
            </value>
            <value>
                <fullName>+1264</fullName>
            </value>
            <value>
                <fullName>+1268</fullName>
            </value>
            <value>
                <fullName>+54</fullName>
            </value>
            <value>
                <fullName>+297</fullName>
            </value>
            <value>
                <fullName>+247</fullName>
            </value>
            <value>
                <fullName>+61</fullName>
            </value>
            <value>
                <fullName>+43</fullName>
            </value>
            <value>
                <fullName>+994</fullName>
            </value>
            <value>
                <fullName>+1242</fullName>
            </value>
            <value>
                <fullName>+973</fullName>
            </value>
            <value>
                <fullName>+880</fullName>
            </value>
            <value>
                <fullName>+1246</fullName>
            </value>
            <value>
                <fullName>+375</fullName>
            </value>
            <value>
                <fullName>+32</fullName>
            </value>
            <value>
                <fullName>+501</fullName>
            </value>
            <value>
                <fullName>+229</fullName>
            </value>
            <value>
                <fullName>+1441</fullName>
            </value>
            <value>
                <fullName>+975</fullName>
            </value>
            <value>
                <fullName>+591</fullName>
            </value>
            <value>
                <fullName>+387</fullName>
            </value>
            <value>
                <fullName>+267</fullName>
            </value>
            <value>
                <fullName>+55</fullName>
            </value>
            <value>
                <fullName>+246</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>