force-app/main/default/objects/Customer_Registration__c/fields/Executive_attended__c.field-meta.xml
<CustomField>
    <fullName>Executive_attended__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive attended</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visit_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>