force-app/main/default/objects/Customer_Registration__c/fields/Existing_Sobha_Owner__c.field-meta.xml
<CustomField>
    <fullName>Existing_Sobha_Owner__c</fullName>
    <label>Existing Sobha Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>