force-app/main/default/objects/Customer_Registration__c/fields/How_Did_You_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Us__c</fullName>
    <label>Walk-In Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Sobha Connect</fullName>
            </value>
            <value>
                <fullName>Chairman Reference</fullName>
            </value>
            <value>
                <fullName>Management Reference</fullName>
            </value>
            <value>
                <fullName>Employee Reference</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>Loyalty Customer</fullName>
            </value>
            <value>
                <fullName>Loyalty Customer Referral</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Stand Leads</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Management referral</fullName>
            </value>
            <value>
                <fullName>Employee referral</fullName>
            </value>
            <value>
                <fullName>Salesperson initiative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>