force-app/main/default/objects/Customer_Registration__c/fields/If_Other_Purpose_Of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Purpose_Of_Purchase__c</fullName>
    <label>If Other Purpose Of Purchase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>