force-app/main/default/objects/Customer_Registration__c/fields/Is_SM_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_SM_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SM Active</label>
    <type>Checkbox</type>
</CustomField>