force-app/main/default/objects/Customer_Registration__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>LeadSource</label>
    <length>100</length>
    <type>Text</type>
</CustomField>