force-app/main/default/objects/Customer_Registration__c/fields/Name_of_Person__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Person__c</fullName>
    <label>Name of Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>