force-app/main/default/objects/Customer_Registration__c/fields/Newspaper_You_Read__c.field-meta.xml
<CustomField>
    <fullName>Newspaper_You_Read__c</fullName>
    <label>Newspaper You Read</label>
    <length>100</length>
    <type>Text</type>
</CustomField>