force-app/main/default/objects/Customer_Registration__c/fields/Opp_Id__c.field-meta.xml
<CustomField>
    <fullName>Opp_Id__c</fullName>
    <formula>opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Id</label>
    <type>Text</type>
</CustomField>