force-app/main/default/objects/Customer_Registration__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Registration Forms</relationshipLabel>
    <relationshipName>Customer_Registration_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>