force-app/main/default/objects/Customer_Registration__c/fields/Please_specify_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_Source_Name__c</fullName>
    <label>Please specify Source Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>