force-app/main/default/objects/Customer_Registration__c/fields/Possessiom_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Possessiom_Timeline__c</fullName>
    <label>Possession Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Move in (RTMI)</fullName>
            </value>
            <value>
                <fullName>Ready to Live In (RTLI)</fullName>
            </value>
            <value>
                <fullName>Under Construction (UC – 1 to 2 years)</fullName>
            </value>
            <value>
                <fullName>Under Construction (UC – 2 to 3 years)</fullName>
            </value>
            <value>
                <fullName>Under Construction (UC – More than 3 years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>